# BaseAlgorithm

./: CMakeLists.txt  README.md  algorithm.cpp  algorithm.h  main.cpp  main.py
Geil-Shapley/: CMakeLists.txt  geil_shapley.cpp  geil_shapley.h
pyalgorithm/: __init__.py  __main__.py  algorithmlib.py
